# Doom-like-Fps-Game

./: CMakeLists.txt  README.md
Devlib/: SDL2_image-2.8.8.dmg  SDL2_mixer-2.8.1.dmg  SDL2_ttf-2.24.0.dmg
include/: Audio.h  Clock.h  Engine.h  Game.h  Interface.h  Map.h  Physics.h  Player.h  Renderer.h  Sprites.h
src/: Audio.cpp  Clock.cpp  Engine.cpp  Game.cpp  Interface.cpp  Map.cpp  Physics.cpp  Player.cpp  Renderer.cpp  Sprites.cpp  main.cpp
